tests/samples/invalid/untyped_integer_too_big.pn
fn main()
{
	var x = 1180591620717411303424;
}
